--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,32 +1,16 @@
-html,
-body {
-  height: 100%;
-}
-
-.navbar-brand {
-  font-family: 'Peralta', cursive;
-}
-
-blockquote {
-  border-left: 5px solid rgba(0,0,0,.125);
-  padding-left: 1.25rem;
-}
-
-.wrapper {
-  position: relative;
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -60px;
-}
-
-.push {
-  height: 60px;
-}
-
-footer {
-  height: 60px;
-  padding: 15px 0;
-  background-color: #e9ecef;
-  position: relative;
-}
+#chat3 .form-control {
+  border-color: transparent;
+  }
+  
+  #chat3 .form-control:focus {
+  border-color: transparent;
+  box-shadow: inset 0px 0px 0px 1px transparent;
+  }
+  
+  .badge-dot {
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin-left: 2.9rem;
+  margin-top: -.75rem;
+  }
