--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css.map' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css.map' %}">
-    <link rel="stylesheet" href="{% static 'css/app.css' %}">
-    {% block stylesheet %}{% endblock %}
+   
+    {% block stylesheets %} {% endblock %}
   </head>
   <body>
     {% block body %}
@@ -57,9 +57,12 @@
         </div>
       </footer>
     {% endblock body %}
+    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.js.map' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js.map' %}"></script>
+    
+    
+    
     <script src="{% static 'js/main.js' %}"></script>
     {% block javascript %}{% endblock %}
   </body>
