--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}ChatBot{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css.map' %}">
@@ -12,7 +14,7 @@
    
     {% block stylesheets %} {% endblock %}
   </head>
-  <body>
+  <body style="background-color: #CFEEFC;">
     {% block body %}
       <div class="wrapper">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -42,20 +44,13 @@
             </div>
           </div>
         </nav>
-        <div class="container">
-          <ol class="breadcrumb my-4">
-            {% block breadcrumb %}
-            {% endblock %}
-          </ol>
+       
+         
           {% block content %}
           {% endblock %}
-        </div>
-        <div class="push"></div>
+        
       </div>
-      <footer>
-        <div class="container">
-        </div>
-      </footer>
+     
     {% endblock body %}
     <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
