--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
 {% block content %}
-<section style="background-color: #CDC4F9;">
+<section style="background-color: #CFEEFC;">
     <div class="container py-5">
   
       <div class="row">
@@ -26,6 +26,8 @@
                         <i class="fa fa-search"></i>
                       </span>
                     </div>
+
+                    
   
                     <div data-mdb-perfect-scrollbar="true" style="position: relative; height: 400px">
                       <ul class="list-unstyled mb-0">
@@ -39,7 +41,7 @@
                                 <span class="badge bg-success badge-dot"></span>
                               </div>
                               <div class="pt-1">
-                                <p class="fw-bold mb-0">Marie Horwitz</p>
+                                <p class="fw-bold mb-0">Algorithme</p>
                                 <p class="small text-muted">Hello, Are you there?</p>
                               </div>
                             </div>
@@ -59,7 +61,7 @@
                                 <span class="badge bg-warning badge-dot"></span>
                               </div>
                               <div class="pt-1">
-                                <p class="fw-bold mb-0">Alexa Chung</p>
+                                <p class="fw-bold mb-0">Logicels</p>
                                 <p class="small text-muted">Lorem ipsum dolor sit.</p>
                               </div>
                             </div>
@@ -79,7 +81,7 @@
                                 <span class="badge bg-success badge-dot"></span>
                               </div>
                               <div class="pt-1">
-                                <p class="fw-bold mb-0">Danny McChain</p>
+                                <p class="fw-bold mb-0">Réseaux et internet</p>
                                 <p class="small text-muted">Lorem ipsum dolor sit.</p>
                               </div>
                             </div>
@@ -88,63 +90,9 @@
                             </div>
                           </a>
                         </li>
-                        <li class="p-2 border-bottom">
-                          <a href="#!" class="d-flex justify-content-between">
-                            <div class="d-flex flex-row">
-                              <div>
-                                <img
-                                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava4-bg.webp"
-                                  alt="avatar" class="d-flex align-self-center me-3" width="60">
-                                <span class="badge bg-danger badge-dot"></span>
-                              </div>
-                              <div class="pt-1">
-                                <p class="fw-bold mb-0">Ashley Olsen</p>
-                                <p class="small text-muted">Lorem ipsum dolor sit.</p>
-                              </div>
-                            </div>
-                            <div class="pt-1">
-                              <p class="small text-muted mb-1">Yesterday</p>
-                            </div>
-                          </a>
-                        </li>
-                        <li class="p-2 border-bottom">
-                          <a href="#!" class="d-flex justify-content-between">
-                            <div class="d-flex flex-row">
-                              <div>
-                                <img
-                                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp"
-                                  alt="avatar" class="d-flex align-self-center me-3" width="60">
-                                <span class="badge bg-warning badge-dot"></span>
-                              </div>
-                              <div class="pt-1">
-                                <p class="fw-bold mb-0">Kate Moss</p>
-                                <p class="small text-muted">Lorem ipsum dolor sit.</p>
-                              </div>
-                            </div>
-                            <div class="pt-1">
-                              <p class="small text-muted mb-1">Yesterday</p>
-                            </div>
-                          </a>
-                        </li>
-                        <li class="p-2">
-                          <a href="#!" class="d-flex justify-content-between">
-                            <div class="d-flex flex-row">
-                              <div>
-                                <img
-                                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                                  alt="avatar" class="d-flex align-self-center me-3" width="60">
-                                <span class="badge bg-success badge-dot"></span>
-                              </div>
-                              <div class="pt-1">
-                                <p class="fw-bold mb-0">Ben Smith</p>
-                                <p class="small text-muted">Lorem ipsum dolor sit.</p>
-                              </div>
-                            </div>
-                            <div class="pt-1">
-                              <p class="small text-muted mb-1">Yesterday</p>
-                            </div>
-                          </a>
-                        </li>
+                        
+                        
+                        
                       </ul>
                     </div>
   
@@ -155,7 +103,7 @@
                 <div class="col-md-6 col-lg-7 col-xl-8">
   
                   <div class="pt-3 pe-3" data-mdb-perfect-scrollbar="true"
-                    style="position: relative; height: 400px; overflow: scroll ;max-height: 700px; width: 100%;">
+                    style="position: relative; height: 500px; overflow: scroll ;max-height: 950px; width: 100%;">
   
                     <div class="d-flex flex-row justify-content-start">
                       <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
@@ -260,14 +208,13 @@
   
                   </div>
   
-                  <div class="text-muted d-flex justify-content-start align-items-center pe-3 pt-3 mt-2">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                      alt="avatar 3" style="width: 40px; height: 100%;">
-                    <input type="text" class="form-control form-control-lg" id="exampleFormControlInput2"
-                      placeholder="Type message">
-                    <a class="ms-1 text-muted" href="#!"><i class="fa fa-paperclip"></i></a>
-                    <a class="ms-3 text-muted" href="#!"><i class="fa fa-smile"></i></a>
-                    <a class="ms-3" href="#!"><i class="fa fa-paper-plane"></i></a>
+                  
+
+                  <div class="input-group mb-3 pe-3 pt-3 mt-2">
+                    <input type="text" class="form-control" placeholder="Send message" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <span class="input-group-text" id="basic-addon2">
+                      <a class="" href="#!"><i class="fa fa-paper-plane"></i></a>
+                    </span>
                   </div>
   
                 </div>
