--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
             <div class="card-body">
   
               <div class="row">
-                <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0" style="overflow: scroll ;max-height: 700px; width: 100%;">
+                <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0" style="overflow: auto ;max-height: 700px; width: 100%;">
   
                   <div class="p-3">
   
@@ -29,7 +29,7 @@
 
                     
   
-                    <div data-mdb-perfect-scrollbar="true" style="position: relative; height: 400px">
+                    <div style="position: relative; height: 400px">
                       <ul class="list-unstyled mb-0">
                         <li class="p-2 border-bottom">
                           <a href="#!" class="d-flex justify-content-between">
@@ -102,8 +102,8 @@
   
                 <div class="col-md-6 col-lg-7 col-xl-8">
   
-                  <div class="pt-3 pe-3" data-mdb-perfect-scrollbar="true"
-                    style="position: relative; height: 500px; overflow: scroll ;max-height: 950px; width: 100%;">
+                  <div class="pt-3 pe-3"
+                    style="position: relative; height: 500px; overflow: auto ;max-height: 950px; width: 100%;">
   
                     <div class="d-flex flex-row justify-content-start">
                       <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
