--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css.map' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css.map' %}">
+    <link rel="stylesheet" href="{% static "css/toastr.css" %}">
+    <script src="{% static "js/jquery-3.6.0.min.js" %}"></script>
+    <script src="{% static "js/toastr.js" %}"></script>
    
     {% block stylesheets %} {% endblock %}
   </head>
