--- a/templates/home.html
+++ b/templates/home.html
@@ -109,113 +109,19 @@
                       <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
                         alt="avatar 1" style="width: 45px; height: 100%;">
                       <div>
-                        <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">Lorem ipsum
-                          dolor
-                          sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore
-                          magna aliqua.</p>
+                        <div  id="MessageContent" class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;"></div>
                         <p class="small ms-3 mb-3 rounded-3 text-muted float-end">12:00 PM | Aug 13</p>
                       </div>
                     </div>
   
-                    <div class="d-flex flex-row justify-content-end">
-                      <div>
-                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Ut enim ad minim veniam,
-                          quis
-                          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p class="small me-3 mb-3 rounded-3 text-muted">12:00 PM | Aug 13</p>
-                      </div>
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-start">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                      <div>
-                        <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">Duis aute
-                          irure
-                          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        </p>
-                        <p class="small ms-3 mb-3 rounded-3 text-muted float-end">12:00 PM | Aug 13</p>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-end">
-                      <div>
-                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Excepteur sint occaecat
-                          cupidatat
-                          non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p class="small me-3 mb-3 rounded-3 text-muted">12:00 PM | Aug 13</p>
-                      </div>
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-start">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                      <div>
-                        <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">Sed ut
-                          perspiciatis
-                          unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                          rem
-                          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                          dicta
-                          sunt explicabo.</p>
-                        <p class="small ms-3 mb-3 rounded-3 text-muted float-end">12:00 PM | Aug 13</p>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-end">
-                      <div>
-                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Nemo enim ipsam
-                          voluptatem quia
-                          voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-                          qui
-                          ratione voluptatem sequi nesciunt.</p>
-                        <p class="small me-3 mb-3 rounded-3 text-muted">12:00 PM | Aug 13</p>
-                      </div>
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-start">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                      <div>
-                        <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color: #f5f6f7;">Neque porro
-                          quisquam
-                          est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
-                          numquam
-                          eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="small ms-3 mb-3 rounded-3 text-muted float-end">12:00 PM | Aug 13</p>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row justify-content-end">
-                      <div>
-                        <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Ut enim ad minima veniam,
-                          quis
-                          nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
-                          commodi
-                          consequatur?</p>
-                        <p class="small me-3 mb-3 rounded-3 text-muted">12:00 PM | Aug 13</p>
-                      </div>
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                        alt="avatar 1" style="width: 45px; height: 100%;">
-                    </div>
+                   
   
                   </div>
   
-                  
 
-                  <div class="input-group mb-3 pe-3 pt-3 mt-2">
-                    <input type="text" class="form-control" placeholder="Send message" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <span class="input-group-text" id="basic-addon2">
-                      <a class="" href="#!"><i class="fa fa-paper-plane"></i></a>
-                    </span>
-                  </div>
+                  <textarea class="form-control" style="width: 100%" rows="6"
+                                  placeholder="Enter your message here" id="Message"></textarea>
+                        <button class="cus-btn-normal" id="Reply">Send</button>
   
                 </div>
               </div>
@@ -228,4 +134,48 @@
   
     </div>
   </section>
+
+  <script>
+    toastr.options.positionClass = 'toast-bottom-left';
+
+    var msgText = $('#Message');
+
+    $('#Reply').click(function () {
+
+        var msg = msgText.val()
+        if (msg == '') {
+            toastr.error("Message can not be empty")
+            return;
+        }
+
+        var data = {
+          "msg": msg
+        }
+        $.ajax({
+            url: '/getBot',
+            headers:{'X-CSRFToken':'{{ csrf_token }}'},
+            data: JSON.stringify(data),
+            method: 'POST',
+            success: function (res) {
+                drawMessage(res)
+            },
+            error: function (err) {
+                if (err.desc == null)
+                    err.desc = "Something went wrong"
+                toastr.error(err.desc)
+            }
+        })
+
+    })
+
+
+    var msgContent = $('#MessageContent');
+
+    function drawMessage(res) {
+        msgContent.append("<div class='col-md-6 owner-message'><p>"+res.ques+"</p><p class='time'>"+res.time+"</p></div>");
+        msgContent.append("<div class='col-md-6 guest-message'><p>"+res.res+"</p><p class='time'>"+res.time+"</p></div>")
+        msgText.val('')
+    }
+
+</script>
 {% endblock %}
